--- a/clients/package.json
+++ b/clients/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-brands-svg-icons": "^7.0.1",
     "@fortawesome/free-regular-svg-icons": "^7.0.1",
@@ -25,10 +26,8 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
-    "quill": "^2.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-router-dom": "^7.9.3",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.13"
