--- a/server/appsettings.Example.json
+++ b/server/appsettings.Example.json
@@ -37,6 +37,10 @@
     "Password": ""
   },
   "SeedDataPath": {
-    "Brands": ""
+    "Brands": "",
+    "SellerAccounts": {
+      "Email": "",
+      "Password": ""
+    }
   }
 }
