--- a/server/DatabaseModels/DatabaseModels.csproj
+++ b/server/DatabaseModels/DatabaseModels.csproj
@@ -17,4 +17,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
 </Project>
