--- a/server/CustomerServer/src/main/resources/application.properties
+++ b/server/CustomerServer/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/TMDT
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=none
+
+server.port=8083
