--- a/server/SellerServer/SellerServer.csproj
+++ b/server/SellerServer/SellerServer.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.3.9" />
     <PackageReference Include="AWSSDK.S3" Version="4.0.7.9" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="4.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
