--- a/server/appsettings.Example.json
+++ b/server/appsettings.Example.json
@@ -21,7 +21,7 @@
   },
   "AWS": {
     "Profile": "default",
-    "RegionEndpoint": "ap-southeast-1",
+    "RegionEndpoint": "us-east-1",
     "AccessKey": "YOUR_ACCESS_KEY",
     "SecretKey": "YOUR_SECRET_KEY",
     "BucketName": "",
