--- a/server/Utilities/Utilities.csproj
+++ b/server/Utilities/Utilities.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.3.9" />
     <PackageReference Include="AWSSDK.S3" Version="4.0.7.9" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="4.0.2" />
     <PackageReference Include="MailKit" Version="4.14.1" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
