--- a/clients/package.json
+++ b/clients/package.json
@@ -24,6 +24,7 @@
     "@tiptap/starter-kit": "^3.6.6",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.545.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
