--- a/clients/dockerfile
+++ b/clients/dockerfile
@@ -5,7 +5,7 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 ARG VITE_MODE
-RUN npm run build
+RUN npm run build -- --mode $VITE_MODE
 
 # Production Stage
 FROM nginx:alpine
